change new ui kit for items
